20181207 Termin mit Auswahlboxen

--- a/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-edit.component.html
+++ b/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-edit.component.html
@@ -20,20 +20,20 @@
     <div class="form-group commands">
       <button *ngIf="editMode" type="submit"
               [disabled]="form.invalid"
-              class="btn btn-success">
+              class="btn btn-sm btn-success">
         <i class="fas fa-save"></i>
         Speichern
       </button>
       <button *ngIf="!editMode" type="submit"
               [disabled]="form.invalid"
-              class="btn btn-success">
+              class="btn btn-sm btn-success">
         <i class="fas fa-plus-circle"></i>
         Aktivität erstellen
       </button>
       <!--<button *ngIf="!editMode" type="submit"-->
       <button type="submit"
               (click)="onBack()"
-              class="btn btn-secondary">
+              class="btn btn-sm btn-secondary">
         <i class="fas fa-arrow-alt-circle-left"></i>
         Zurück
       </button>
