--- a/Template_Angular7/ClientApp/src/app/components/about/about.component.html
+++ b/Template_Angular7/ClientApp/src/app/components/about/about.component.html
@@ -1,5 +1,4 @@
-<h2>{{title}}</h2>
+<h3>{{title}}</h3>
 <div>
-  Gruppenplaner: a production-ready, fully-featured SPA sample
-  powered by ASP.NET Core and Angular.
+  Gruppenplaner by ASP.NET Core and Angular.
 </div>
