--- a/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-liste.component.html
+++ b/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-liste.component.html
@@ -1,4 +1,4 @@
-<h3>Aktivitätscodes</h3>
+<h3>{{title}}</h3>
 <div *ngIf="code_aktivitaeten.length > 0">
   <div class="table-responsive">
     <table class="table table-hover questions">
