--- a/Template_Angular7/ClientApp/src/app/components/gruppe/gruppe-edit.component.html
+++ b/Template_Angular7/ClientApp/src/app/components/gruppe/gruppe-edit.component.html
@@ -1,29 +1,52 @@
-<div class="gruppe-edit">
-  <h2>{{title}}</h2>
+<div class="gruppe-edit container-fluid">
+  <h3>{{title}}</h3>
   <form [formGroup]="form" (ngSubmit)="onSubmit()">
-    <div class="form-group">
-      <label for="code">Kurzbezeichnung:</label>
-      <br />
-      <input type="text" id="code"
-             formControlName="Code" required
-             placeholder="Kurzbezeichnung eingeben..."
-             class="form-control" />
+    <div class="form-group row">
+      <label for="code" class="col-sm-3 col-form-label">Kurzbezeichnung:</label>
+      <div class="col-sm-3">
+        <input type="text" id="code"
+               formControlName="Code" required
+               placeholder="Kurzbezeichnung eingeben..."
+               class="form-control" />
+      </div>
     </div>
-    <div class="form-group">
-      <label for="bezeichnung">Bezeichnung:</label>
-      <br />
-      <input type="text" id="bezeichnung"
-             formControlName="Bezeichnung" required
-             placeholder="Bezeichnung eingeben..."
-             class="form-control" />
+    <div class="form-group row">
+      <label for="bezeichnung" class="col-sm-3 col-form-label">Bezeichnung:</label>
+      <div class="col-sm-8">
+        <input type="text" id="bezeichnung"
+               formControlName="Bezeichnung" required
+               placeholder="Bezeichnung eingeben..."
+               class="form-control" />
+      </div>
     </div>
-    <div class="form-group">
-      <label for="beschreibung">Gruppenbeschreibung:</label>
-      <br />
-      <textarea id="beschreibung"
-                formControlName="Beschreibung"
-                placeholder="Beschreibung eingeben..."
-                class="form-control"></textarea>
+    <div class="form-group row">
+      <label for="beschreibung" class="col-sm-3 col-form-label">Gruppenbeschreibung:</label>
+      <div class="col-sm-8">
+        <textarea id="beschreibung"
+                  formControlName="Beschreibung"
+                  placeholder="Beschreibung eingeben..."
+                  class="form-control"></textarea>
+      </div>
+    </div>
+    <div class="form-group commands">
+      <button *ngIf="editMode" type="submit"
+              [disabled]="form.invalid"
+              class="btn btn-sm btn-success">
+        <i class="fas fa-save"></i>
+        Speichern
+      </button>
+      <button *ngIf="!editMode" type="submit"
+              [disabled]="form.invalid"
+              class="btn btn-sm btn-success">
+        <i class="fas fa-plus-circle"></i>
+        Gruppe erstellen
+      </button>
+      <button *ngIf="!editMode" type="submit"
+              (click)="onBack()"
+              class="btn btn-sm btn-default">
+        <i class="fas fa-arrow-alt-circle-left"></i>
+        Zurück
+      </button>
     </div>
 
     <!--<div class="form-group">
@@ -36,30 +59,15 @@
 
       </div>
     </div>-->
-    <div class="form-group commands">
-      <button *ngIf="editMode" type="submit"
-              [disabled]="form.invalid"
-              class="btn btn-success">
-        <i class="fas fa-save"></i>
-        Speichern
-      </button>
-      <button *ngIf="!editMode" type="submit"
-              [disabled]="form.invalid"
-              class="btn btn-success">
-        <i class="fas fa-plus-circle"></i>
-        Gruppe erstellen
-      </button>
-      <button *ngIf="!editMode" type="submit"
-              (click)="onBack()"
-              class="btn btn-default">
-        <i class="fas fa-arrow-alt-circle-left"></i>
-        Zurück
-      </button>
-    </div>
+
   </form>
 
-  <termin-liste *ngIf="editMode" [myGruppe]="gruppe"></termin-liste>
-  <teilnehmer-liste *ngIf="editMode" [myGruppe]="gruppe" ></teilnehmer-liste>
-  <code_aktivitaeten-liste *ngIf="editMode" [myGruppe]="gruppe" ></code_aktivitaeten-liste>
+
+  <div><termin-liste *ngIf="editMode" [myGruppe]="gruppe" ></termin-liste></div>
+  <br><br>
+  <div><teilnehmer-liste *ngIf="editMode" [myGruppe]="gruppe" ></teilnehmer-liste></div>
+  <br><br>
+  <div><code_aktivitaeten-liste *ngIf="editMode" [myGruppe]="gruppe" ></code_aktivitaeten-liste></div>
 
 </div>
+
