--- a/Template_Angular7/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Template_Angular7/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -3,16 +3,22 @@
     <a class="navbar-image" [routerLink]="['/home']">
       <img src="/dist/logo.png" alt="Gruppenplaner"/>
     </a>
-    <a class="navbar-brand" [routerLink]='["/"]' href="#" (click)='collapse()'>Gruppenplaner</a>
+    <a class="navbar-brand" [routerLink]='["/"]' href="#" (click)='collapse()'>Planer</a>
     <button class="navbar-toggler btn btn-outline-primary" type="button" data-toggle="collapse"
-            data-target="#navbarTogglerDemo02" aria-expanded="false"
+            data-target="#navbarToggler" aria-expanded="false"
             aria-label="Toggle navigation" (click)="isCollapsed = !isCollapsed" [attr.aria-expanded]="isCollapsed"
             aria-controls="navbarTogglerDemo02">
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo02" [ngbCollapse]="isCollapsed">
+    <div class="collapse navbar-collapse" id="navbarToggler" [ngbCollapse]="isCollapsed">
       <ul class="navbar-nav mr-auto">
+        <li [routerLinkActive]="['link-active']" (click)='collapse()'>
+          <a data-toggle="collapse"  class="nav-link" [routerLink]="['/home']">
+            <i class="fas fa-address-book"></i>
+            Gruppen
+          </a>
+        </li>
         <li [routerLinkActive]="['link-active']" (click)='collapse()'>
           <a data-toggle="collapse"  class="nav-link" [routerLink]="['/teilnehmer/alle/0']">
             <i class="fas fa-address-book"></i>
@@ -29,6 +35,12 @@
           <a class="nav-link" [routerLink]="['/termine/alle/0']">
             <i class="fa fa-calendar-alt"></i>
             Termine
+          </a>
+        </li>
+        <li [routerLinkActive]="['link-active']" (click)='collapse()'>
+          <a class="nav-link" [routerLink]="['/kalender/0']">
+            <i class="fa fa-calendar-alt"></i>
+            Kalender
           </a>
         </li>
         <li [routerLinkActive]="['link-active']" (click)='collapse()'>
