20181207 Termin mit Auswahlboxen 20181208 mit Angular 6 Kalender (https://mattlewis92.github.io/angular-calendar/#)

--- a/Template_Angular7/ClientApp/src/app/components/kalender/kalender.component.scss
+++ b/Template_Angular7/ClientApp/src/app/components/kalender/kalender.component.scss
@@ -1,19 +1,8 @@
-@media (max-width:575px) {
-  .display-4 {
-    font-size: 1.5rem;
-  }
-  .day h5 {
-    background-color: #f8f9fa;
-    padding: 3px 5px 5px;
-    margin: -8px -8px 8px -8px;
-  }
-  .date {
-    padding-left: 4px;
-  }
+h3 {
+  margin: 0 0 10px;
 }
 
-@media (min-width: 576px) {
-  .day {
-    height: 14.2857vw;
-  }
+pre {
+  background-color: #f5f5f5;
+  padding: 15px;
 }
