--- a/Template_Angular7/ClientApp/src/styles.scss
+++ b/Template_Angular7/ClientApp/src/styles.scss
@@ -3,3 +3,4 @@
 @import '../node_modules/bootstrap/scss/bootstrap';
 @import "../node_modules/@fortawesome/fontawesome-free/css/all.css";
 @import "../node_modules/ngx-bootstrap/datepicker/bs-datepicker.scss";
+@import "../node_modules/angular-calendar/css/angular-calendar.css";
