--- a/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-edit.component.html
+++ b/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-edit.component.html
@@ -1,21 +1,30 @@
 <div class="code_aktivitaeten-edit">
   <h2>{{title}}</h2>
   <form [formGroup]="form" (ngSubmit)="onSubmit()">
-    <div class="form-group">
-      <label for="code">Kurzbezeichnung:</label>
-      <br />
-      <input type="text" id="code"
-             formControlName="Code" required
-             placeholder="Kurzbezeichnung eingeben..."
-             class="form-control" />
+    <div class="form-group row">
+      <label for="code" class="col-sm-2 col-form-label">Kurzbezeichnung:</label>
+      <div class="col-sm-3">
+        <input type="text" id="code"
+               formControlName="Code" required
+               placeholder="Kurzbezeichnung eingeben..."
+               class="form-control" />
+      </div>
     </div>
-    <div class="form-group">
-      <label for="bezeichnung">Bezeichnung:</label>
-      <br />
-      <input type="text" id="bezeichnung"
-             formControlName="Bezeichnung" required
-             placeholder="Bezeichnung eingeben..."
-             class="form-control" />
+    <div class="form-group row">
+      <label for="bezeichnung" class="col-sm-2 col-form-label">Bezeichnung:</label>
+      <div class="col-sm-3">
+        <input type="text" id="bezeichnung"
+               formControlName="Bezeichnung" required
+               placeholder="Bezeichnung eingeben..."
+               class="form-control" />
+      </div>
+    </div>
+    <div class="form-group row">
+      <label for="aktcolor" class="col-sm-2 col-form-label">Farbe:</label>
+      <div class="col-sm-3">
+        <input type="color" id="aktcolor" formControlName="Farbe"
+               class="form-control" [value]="Farbe" />
+      </div>
     </div>
     <div class="form-group commands">
       <button *ngIf="editMode" type="submit"
