--- a/Template_Angular7/ClientApp/src/app/components/gruppe/gruppe-edit.component.html
+++ b/Template_Angular7/ClientApp/src/app/components/gruppe/gruppe-edit.component.html
@@ -47,6 +47,12 @@
         <i class="fas fa-arrow-alt-circle-left"></i>
         Zurück
       </button>
+      <button type="submit"
+              (click)="onShowPlaner()"
+              class="btn btn-sm btn-default">
+        <i class="fas fa-arrow-alt-circle-left"></i>
+        Zeige Planer
+      </button>
     </div>
 
     <!--<div class="form-group">
