--- a/Template_Angular7/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Template_Angular7/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -20,19 +20,19 @@
           </a>
         </li>
         <li [routerLinkActive]="['link-active']" (click)='collapse()'>
-          <a data-toggle="collapse"  class="nav-link" [routerLink]="['/teilnehmer/alle/0']">
+          <a data-toggle="collapse"  class="nav-link" [routerLink]="['/teilnehmer/vteilnehmer/0']">
             <i class="fas fa-address-book"></i>
             Teilnehmer
           </a>
         </li>
         <li [routerLinkActive]="['link-active']" (click)='collapse()'>
-          <a class="nav-link" [routerLink]="['/codesaktivitaeten/alle/0']">
+          <a class="nav-link" [routerLink]="['/codesaktivitaeten/vaktivitaeten/0']">
             <i class="fa fa-book"></i>
-            Alle Aktivitätencodes
+            Aktivitätencodes
           </a>
         </li>
         <li [routerLinkActive]="['link-active']" (click)='collapse()'>
-          <a class="nav-link" [routerLink]="['/termine/alle/0']">
+          <a class="nav-link" [routerLink]="['/termine/vtermine/0']">
             <i class="fa fa-calendar-alt"></i>
             Termine
           </a>
