--- a/Template_Angular7/ClientApp/src/app/components/gruppe/gruppe-edit.component.css
+++ b/Template_Angular7/ClientApp/src/app/components/gruppe/gruppe-edit.component.css
@@ -8,4 +8,7 @@
   .gruppe-edit .commands {
     margin-top: 10px; }
 
+.input-group-text {
+  margin-left: 8px; }
+
 /*# sourceMappingURL=gruppe-edit.component.css.map */
