--- a/Template_Angular7/ClientApp/src/app/components/gruppe/gruppe-edit.component.html
+++ b/Template_Angular7/ClientApp/src/app/components/gruppe/gruppe-edit.component.html
@@ -28,6 +28,14 @@
                   class="form-control"></textarea>
       </div>
     </div>
+    <div class="input-group row">
+      <label for="aktiv" class="col-sm-3 col-form-label">Aktiv:</label>
+      <div class="input-group-prepend col-sm-8">
+        <div class="input-group-text">
+          <input id="aktiv" type="checkbox" formControlName="Aktiv">
+        </div>
+      </div>
+    </div>
     <div class="form-group commands">
       <button *ngIf="editMode" type="submit"
               [disabled]="form.invalid"
@@ -41,7 +49,7 @@
         <i class="fas fa-plus-circle"></i>
         Gruppe erstellen
       </button>
-      <button *ngIf="!editMode" type="submit"
+      <button type="submit"
               (click)="onBack()"
               class="btn btn-sm btn-default">
         <i class="fas fa-arrow-alt-circle-left"></i>
@@ -54,6 +62,7 @@
         Zeige Planer
       </button>
     </div>
+
 
     <!--<div class="form-group">
       <label for="gender1" class="col-sm-2 control-label">Gender:</label>
