--- a/Template_Angular7/ClientApp/src/app/components/teilnehmer/teilnehmer-liste.component.html
+++ b/Template_Angular7/ClientApp/src/app/components/teilnehmer/teilnehmer-liste.component.html
@@ -5,18 +5,18 @@
     <table class="table table-hover questions">
       <thead>
       <tr>
-        <th>Code</th>
-        <th>Text</th>
-        <th>GruppenId</th>
+        <th>Name</th>
+        <th>Gruppe</th>
+        <th>Rechte</th>
         <th></th>
         <th></th>
       </tr>
       </thead>
       <tbody>
       <tr *ngFor="let gruppenteilnehmer of myTeilnehmer">
-        <td>{{gruppenteilnehmer.Vorname}}</td>
-        <td>{{gruppenteilnehmer.Nachname}}</td>
-        <td>{{gruppenteilnehmer.GruppenId}}</td>
+        <td>{{gruppenteilnehmer.Vorname}} {{gruppenteilnehmer.Vorname}}</td>
+        <td>{{gruppenteilnehmer.GruppeCode}}</td>
+        <td>{{gruppenteilnehmer.Berechtigungen}}</td>
         <td>
           <button type="submit"
                   (click)="onEdit(gruppenteilnehmer)"
