--- a/Template_Angular7/ClientApp/src/styles.css
+++ b/Template_Angular7/ClientApp/src/styles.css
@@ -7,6 +7,7 @@
  */
 @import url(../node_modules/@fortawesome/fontawesome-free/css/all.css);
 @import url(../node_modules/angular-calendar/css/angular-calendar.css);
+@import url(../node_modules/flatpickr/dist/flatpickr.min.css);
 :root {
   --blue: #007bff;
   --indigo: #6610f2;
