20181207 Termin mit Auswahlboxen 20181208 mit Angular 6 Kalender (https://mattlewis92.github.io/angular-calendar/#)

--- a/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-liste.component.html
+++ b/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-liste.component.html
@@ -8,7 +8,8 @@
         <th>Code</th>
         <th>Bezeichnung</th>
         <th>Gruppe</th>
-        <!--<th>Gruppe Id</th>-->
+        <th>Summieren</th>
+        <th>Summieren</th>
         <th></th>
         <th></th>
       </tr>
@@ -18,6 +19,7 @@
         <td>{{aktivitaet.Code}}</td>
         <td>{{aktivitaet.Bezeichnung}}</td>
         <td>{{aktivitaet.GruppeCode}}</td>
+        <td>{{aktivitaet.Summieren}}</td>
         <!--<td>{{aktivitaet.GruppenId}}</td>-->
         <td>
           <button type="submit"
