--- a/Template_Angular7/ClientApp/src/app/components/teilnehmer/teilnehmer-liste.component.html
+++ b/Template_Angular7/ClientApp/src/app/components/teilnehmer/teilnehmer-liste.component.html
@@ -14,7 +14,7 @@
       </thead>
       <tbody>
       <tr *ngFor="let gruppenteilnehmer of myTeilnehmer">
-        <td>{{gruppenteilnehmer.Vorname}} {{gruppenteilnehmer.Vorname}}</td>
+        <td>{{gruppenteilnehmer.Vorname}} {{gruppenteilnehmer.Nachname}}</td>
         <td>{{gruppenteilnehmer.GruppeCode}}</td>
         <td>{{gruppenteilnehmer.Berechtigungen}}</td>
         <td>
