--- a/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-edit.component.css
+++ b/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-edit.component.css
@@ -10,4 +10,7 @@
   .code_aktivitaeten-edit .commands {
     margin-top: 20px; }
 
+.input-group-text {
+  margin-left: 7px; }
+
 /*# sourceMappingURL=code_aktivitaeten-edit.component.css.map */
