--- a/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-edit.component.html
+++ b/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-edit.component.html
@@ -26,6 +26,14 @@
                class="form-control" [value]="Farbe" />
       </div>
     </div>
+    <div class="input-group row">
+      <label for="summieren" class="col-sm-2 col-form-label">Summieren:</label>
+      <div class="input-group-prepend col-sm-3">
+        <div class="input-group-text">
+          <input id="summieren" type="checkbox" formControlName="Summieren">
+        </div>
+      </div>
+    </div>
     <div class="form-group commands">
       <button *ngIf="editMode" type="submit"
               [disabled]="form.invalid"
