--- a/Template_Angular7/ClientApp/src/app/components/gruppe/gruppe-edit.component.html
+++ b/Template_Angular7/ClientApp/src/app/components/gruppe/gruppe-edit.component.html
@@ -56,25 +56,12 @@
         Zurück
       </button>
       <button type="submit"
-              (click)="onShowPlaner()"
-              class="btn btn-sm btn-default">
-        <i class="fas fa-arrow-alt-circle-left"></i>
+              (click)="onShowPlaner(gruppe)"
+              class="btn btn-sm btn-primary">
+        <i class="fas fa-calendar-alt"></i>
         Zeige Planer
       </button>
     </div>
-
-
-    <!--<div class="form-group">
-      <label for="gender1" class="col-sm-2 control-label">Gender:</label>
-      <div class="col-sm-2 input-group">
-        <select class="form-control inputstl" id="gender1">
-          <option>Male</option>
-          <option>Female</option>
-        </select>
-
-      </div>
-    </div>-->
-
   </form>
 
 
