--- a/Template_Angular7/ClientApp/src/app/components/teilnehmer/teilnehmer-edit.component.html
+++ b/Template_Angular7/ClientApp/src/app/components/teilnehmer/teilnehmer-edit.component.html
@@ -1,21 +1,23 @@
 <div class="teilnehmer-edit">
   <h2>{{title}}</h2>
   <form [formGroup]="form" (ngSubmit)="onSubmit()">
-    <div class="form-group">
-      <label for="vorname">Vorname:</label>
-      <br />
-      <input type="text" id="vorname"
-             formControlName="Vorname" required
-             placeholder="Vorname eingeben..."
-             class="form-control" />
+    <div class="form-group row">
+      <label for="vorname" class="col-sm-2 col-form-label">Vorname:</label>
+      <div class="col-sm-3">
+        <input type="text" id="vorname"
+               formControlName="Vorname" required
+               placeholder="Vorname eingeben..."
+               class="form-control" />
+      </div>
     </div>
-    <div class="form-group">
-      <label for="nachname">Nachname:</label>
-      <br />
-      <input type="text" id="nachname"
-             formControlName="Nachname" required
-             placeholder="Nachname eingeben..."
-             class="form-control" />
+    <div class="form-group row">
+      <label for="nachname" class="col-sm-2 col-form-label">Nachname:</label>
+      <div class="col-sm-3">
+        <input type="text" id="nachname"
+               formControlName="Nachname" required
+               placeholder="Nachname eingeben..."
+               class="form-control" />
+      </div>
     </div>
     <div class="form-group commands">
       <!--<button *ngIf="editMode" type="submit"-->
