--- a/Template_Angular7/ClientApp/src/app/components/termin/termin-edit.component.html
+++ b/Template_Angular7/ClientApp/src/app/components/termin/termin-edit.component.html
@@ -5,10 +5,18 @@
       <label for="mydatum" class="col-sm-2 col-form-label">Datum:</label>
       <div class="col-sm-3">
         <input type="text" class="form-control" id="mydatum"
-               formControlName="Datum"
+               formControlName="DatumBeginn"
                bsDatepicker [bsConfig]="datePickerConfig"
-               [bsValue]="Datum"
-               [value]="Datum" />
+               [bsValue]="DatumBeginn"
+               [value]="DatumBeginn" />
+      </div>
+      ...
+      <div class="col-sm-3">
+        <input type="text" class="form-control"
+               formControlName="DatumEnde"
+               bsDatepicker [bsConfig]="datePickerConfig"
+               [bsValue]="DatumEnde"
+               [value]="DatumEnde" />
       </div>
     </div>
 
@@ -80,9 +88,17 @@
         Zurück
       </button>
     </div>
+    <div class="form-group commands">
+      <button id="btnShowDataJson " type="button" (click)="onShowDataJson()"
+              class="btn btn-sm btn-success">
+        <i class="fas fa-eye"></i>
+        <span *ngIf="showDataJson"> JSON-Daten verbergen</span>
+        <span *ngIf="!showDataJson"> JSON-Daten anzeigen</span>
+      </button>
+    </div>
   </form>
 </div>
-<div class="row">
+<div *ngIf="showDataJson" class="row">
   <div class="col-xs-12 col-md-12">
     <a>Form-Feldinhalte</a>
     <pre class="code-preview">{{form.value | json}}</pre>
