20181210 - Kalender auf Deutsch

--- a/Template_Angular7/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Template_Angular7/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -51,6 +51,8 @@
         </li>
       </ul>
     </div>
+    <!--Facebook-->
+    <!--<button type="button" mdbBtn class="btn-fb waves-light" mdbWavesEffect><i class="fa fa-facebook left"></i>Facebook</button>-->
   </nav>
 </div>
 
