--- a/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-liste.component.css
+++ b/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-liste.component.css
@@ -11,4 +11,9 @@ table.code_aktivitaeten {
 table.table-hover tbody :hover {
   background-color: rgba(158, 204, 229, 0.23); }
 
+.square {
+  margin-top: 3px;
+  width: 50px;
+  height: 20px; }
+
 /*# sourceMappingURL=code_aktivitaeten-liste.component.css.map */
