--- a/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-liste.component.scss
+++ b/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-liste.component.scss
@@ -15,4 +15,9 @@ table.table-hover tbody :hover {
   background-color: rgba(158, 204, 229, 0.23);
 }
 
+.square{
+  margin-top: 3px;
+  width: 50px;
+  height: 20px;
+}
 
