--- a/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-liste.component.html
+++ b/Template_Angular7/ClientApp/src/app/components/code_aktivitaeten/code_aktivitaeten-liste.component.html
@@ -8,6 +8,8 @@
         <th>Code</th>
         <th>Bezeichnung</th>
         <th>Gruppe</th>
+        <th>Beginn</th>
+        <th>Ende</th>
         <th></th>
         <th>Summieren</th>
         <th></th>
@@ -20,6 +22,8 @@
         <td>{{aktivitaet.Code}}</td>
         <td>{{aktivitaet.Bezeichnung}}</td>
         <td>{{aktivitaet.GruppeCode}}</td>
+        <td>{{aktivitaet.ZeitBeginn | date: 'HH:mm'}}</td>
+        <td>{{aktivitaet.ZeitEnde | date: 'HH:mm'}}</td>
         <!--<td>{{aktivitaet.Farbe}}</td>-->
         <td>
           <!--<h5 [style.color]=[aktivitaet.Farbe] >Farbe</h5>-->
@@ -59,3 +63,18 @@
   Neue Aktivität erstellen
 </button>
 
+
+<div class="form-group commands">
+  <button id="btnShowDataJson " type="button" (click)="onShowDataJson()"
+          class={{showDataJsonBtnClass}} >
+    <i class={{showDataJsonBtnIcon}}></i>
+    {{showDataJsonTitle}}
+  </button>
+</div>
+
+<div *ngIf="showDataJson" class="row">
+  <div class="col-xs-12 col-md-12">
+    <a>Aktivitäten</a>
+    <pre class="code-preview">{{code_aktivitaeten | json}}</pre>
+  </div>
+</div>
