--- a/Template_Angular7/ClientApp/src/app/components/gruppe/gruppen-liste.component.html
+++ b/Template_Angular7/ClientApp/src/app/components/gruppe/gruppen-liste.component.html
@@ -28,7 +28,7 @@
         <td>{{gruppe.Id}}</td>
         <td>{{gruppe.Code}}</td>
         <td>{{gruppe.Bezeichnung}}</td>
-        <td>{{gruppe.Aktiv}}</td>
+        <td style="text-align:center;"></td>
         <td>
           <button type="submit"
                   (click)="onEdit(gruppe)"
