--- a/Template_Angular7/ClientApp/src/app/components/termin/termin-liste.component.html
+++ b/Template_Angular7/ClientApp/src/app/components/termin/termin-liste.component.html
@@ -9,7 +9,8 @@
         <th>Ende</th>
         <th>Gruppe</th>
         <th>Teilnehmer</th>
-        <th>Aktivität</th>
+        <th>Akt Code</th>
+        <th>GanzerTag</th>
         <th>Akt Beginn</th>
         <th>Akt Ende</th>
         <th>Hinweis</th>
@@ -24,9 +25,15 @@
         <td>{{termin.DatumEnde | date: 'dd.MM.yy'}}</td>
         <td>{{termin.GrpCode}}</td>
         <td>{{termin.TnVorname}} {{termin.TnNachname}}</td>
-        <td>{{termin.AktCode}}</td>
-        <td>{{termin.DatumBeginn | date: 'HH:mm'}}</td>
-        <td>{{termin.DatumEnde | date: 'HH:mm'}}</td>
+        <td style="text-align:center;"> {{termin.AktCode}}</td>
+        <td style="text-align:center;"><input type="checkbox"  [checked]="termin.GanzerTag" onclick="return false;"/></td>
+        <td *ngIf="termin.GanzerTag"></td>
+        <td *ngIf="termin.GanzerTag"></td>
+        <td *ngIf="!termin.GanzerTag">{{termin.DatumBeginn | date: 'HH:mm'}}</td>
+        <td *ngIf="!termin.GanzerTag">{{termin.DatumEnde | date: 'HH:mm'}}</td>
+
+        <!--<td>{{termin.DatumBeginn | date: 'HH:mm'}}</td>
+        <td>{{termin.DatumEnde | date: 'HH:mm'}}</td>-->
         <td>{{termin.Hinweis}}</td>
         <td>
           <button type="submit"
