--- a/Template_Angular7/ClientApp/src/app/components/termin/termin-edit.component.scss
+++ b/Template_Angular7/ClientApp/src/app/components/termin/termin-edit.component.scss
@@ -2,3 +2,43 @@
   border-bottom: 2px solid #8ec4e5;
   border-top: 5px solid #8ec4e5;
 }
+
+.chkganztaegig {
+  //border-bottom: 1px solid #8ec4e5;
+  //border-top: 1px solid #8ec4e5;
+  margin-bottom: 8px;
+  margin-left: 20px;
+  padding-bottom: 5px;
+  padding-left: 5px;
+}
+
+.tabwiederholungen {
+  color: #5bc0de;
+  margin-bottom: 5px;
+  margin-left: 5px;
+  padding-bottom: 5px;
+  padding-left: 12px;
+}
+
+.td_size {
+  width:35px;
+  height:20px;
+  text-align: center;
+}
+
+.selAnzWHLabel {
+  margin-top: 0px;
+  margin-bottom: 5px;
+  margin-left: 10px;
+  padding-top: 27px;
+  padding-left: 15px;
+}
+
+.selAnzWH {
+  width: 130px;
+  margin-top: 0px;
+  margin-bottom: 5px;
+  margin-left: 10px;
+  padding-top: 20px;
+  padding-left: 15px;
+}
