--- a/Template_Angular7/ClientApp/src/app/components/termin/termin-edit.component.html
+++ b/Template_Angular7/ClientApp/src/app/components/termin/termin-edit.component.html
@@ -1,5 +1,6 @@
 <div class="termine-edit">
   <h2>Termin: {{title}}</h2>
+  <div *ngIf="master > 0"><h5>Termin: {{master}}</h5></div>
   <form [formGroup]="form" autocomplete="off" (ngSubmit)="onSubmit()">
     <div class="form-group row">
       <label for="mydatum" class="col-sm-2 col-form-label">Datum:</label>
@@ -119,17 +120,13 @@
       <div *ngIf="zzTerminAnzWiederholungen.length > 0" >
         <div class="selAnzWH">
           <select id="idWiederholungen" formControlName="AnzWiederholungen" required class="form-control">
-            <option *ngFor="let data of zzTerminAnzWiederholungen" [value]="data.Id"  >
+            <option *ngFor="let data of zzTerminAnzWiederholungen" [value]="data.Count"  >
               {{data.Bezeichnung}}
             </option>
           </select>
         </div>
       </div>
-
-
     </div>
-
-
 
     <div class="form-group row">
       <label for="hinweis" class="col-sm-2 col-form-label">Hinweis:</label>
